syntax = "proto3";

package pb;

option go_package = ".;pb";

service SshTunnel {
  rpc OpenTunnel(TunnelConfiguration) returns (Response) {}
}

message TunnelConfiguration {
  string user = 1;
  string host = 2;
  bool ssh_agent = 3;
  string private_key = 4;
  string certificate = 5;
  string local_address = 6;
  string remote_address = 7;
  string proxy_address = 8;
}

message Response {
  bool success = 1;
  string effective_address = 2;
  string port = 3;
}
